@@ -28,7 +28,10 @@ The compiled binary image of this program is located in bin/ subdirectory.
 3.	turnutils_stunclient: a simple STUN client example. 
 The compiled binary image of this program is located in bin/ subdirectory.
   
-4.	turnutils_rfc5769check: a utility that checks the correctness of the STUN/TURN protocol implementation.
+4.	turnutils_rfc5769check: a utility that checks the correctness of the 
+STUN/TURN protocol implementation. This utility is used only for the compilation
+check procedure, it is not copied to the installation destination.
+
 
 In the "examples/scripts" subdirectory, you will find the examples of command lines to be used 
 to run the programs. The scripts are meant to be run from examples/ subdirectory, for example:
@@ -187,7 +190,9 @@ turnutils_rfc5769check - a utility that tests the correctness of STUN protocol i
   DESCRIPTION
 
 turnutils_rfc5769check tests the correctness of STUN protocol implementation 
-against the test vectors predefined in RFC 5769 and prints the results of the tests on the screen.
+against the test vectors predefined in RFC 5769 and prints the results of the 
+tests on the screen. This utility is used only for the compilation
+check procedure, it is not copied to the installation destination.
 	
 Usage:  
 
