@@ -1,5 +1,5 @@
 .\" Text automatically generated by txt2man
-.TH TURN 1 "13 June 2013" "" ""
+.TH TURN 1 "14 June 2013" "" ""
 .SH GENERAL INFORMATION
 
 A set of turnutils_* programs provides some utility functionality to be used
@@ -38,8 +38,13 @@ The compiled binary image of this program is located in bin/ subdirectory.
 .TP
 .B
 4.
-\fIturnutils_rfc5769check\fP: a utility that checks the correctness of the STUN/TURN protocol implementation.
+\fIturnutils_rfc5769check\fP: a utility that checks the correctness of the 
+STUN/TURN protocol implementation. This utility is used only for the compilation
+check procedure, it is not copied to the installation destination.
+.RE
 .PP
+
+.RS
 In the "examples/scripts" subdirectory, you will find the examples of command lines to be used 
 to run the programs. The scripts are meant to be run from examples/ subdirectory, for example:
 .PP
@@ -275,7 +280,9 @@ $ \fIturnutils_rfc5769check\fP
 .SS  DESCRIPTION
 
 \fIturnutils_rfc5769check\fP tests the correctness of STUN protocol implementation 
-against the test vectors predefined in RFC 5769 and prints the results of the tests on the screen.
+against the test vectors predefined in RFC 5769 and prints the results of the 
+tests on the screen. This utility is used only for the compilation
+check procedure, it is not copied to the installation destination.
 .TP
 .B
 Usage:
