@@ -2120,7 +2120,8 @@ int main(int argc, char **argv)
 
 #if defined(_SC_NPROCESSORS_ONLN) && !defined(TURN_NO_THREADS) && !defined(TURN_UDP_SOCKET_CONNECT_BUG)
 
-	relay_servers_number = sysconf(_SC_NPROCESSORS_CONF);
+	/* UDP threads plus one TCP/TLS thread: */
+	relay_servers_number = sysconf(_SC_NPROCESSORS_CONF) + 1;
 
 	if(relay_servers_number<1)
 		relay_servers_number = 1;
